Bug #43527: enable hiding the teachers screen by default
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@77228 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-computerroom (9.0.6-1.1) unstable; urgency=low
+
+  * Bug #43527: enable hiding the teachers screen by default
+    (ucsschool/umc/computerroom/hide_screenshots/teachers)
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 02 Mar 2017 11:40:13 +0100
+
 ucs-school-umc-computerroom (9.0.6-1) unstable; urgency=medium
 
   * Bug #42408: decorator was renamed
