--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-netlogon-user-logonscripts (12.0.5-1) unstable; urgency=low
+
+  * Bug #37256: update of UCR variable descriptions and translations
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 20 Feb 2017 12:55:08 +0100
+
 ucs-school-netlogon-user-logonscripts (12.0.4-10) unstable; urgency=low
 
   * Bug #43526: support switching off parts of logon script, introducing
