--- a/ucs-school-umc-wizards/debian/changelog
+++ b/ucs-school-umc-wizards/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-wizards (8.0.1-1) unstable; urgency=low
+
+  * Bug #42349: hide disabled user roles in drop downs
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 02 Mar 2017 12:29:28 +0100
+
 ucs-school-umc-wizards (8.0.0-15) unstable; urgency=low
 
   * Bug #43170: fix removal of users from secondary OUs
