--- a/ucs-school-umc-csv-import/debian/changelog
+++ b/ucs-school-umc-csv-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-csv-import (3.0.5-1) unstable; urgency=low
+
+  * Bug #41387: hide disabled user roles in drop downs by setting the UCR
+    variable ucsschool/csvimport/user/roles/disabled
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 02 Mar 2017 13:06:23 +0100
+
 ucs-school-umc-csv-import (3.0.4-8) unstable; urgency=low
 
   * Bug #41987: allow import without classes in CSV
