--- a/ucs-school-umc-csv-import/debian/changelog
+++ b/ucs-school-umc-csv-import/debian/changelog
@@ -2,6 +2,7 @@ ucs-school-umc-csv-import (3.0.5-1) unstable; urgency=low
 
   * Bug #41387: hide disabled user roles in drop downs by setting the UCR
     variable ucsschool/csvimport/user/roles/disabled
+  * Bug #41418: remove broken code block in postinst
 
  -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 02 Mar 2017 13:06:23 +0100
 
