--- a/ucs-school-umc-csv-import/debian/changelog
+++ b/ucs-school-umc-csv-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-csv-import (3.0.5-2) unstable; urgency=low
+
+  * Bug #41387: fix 38ucs-school-umc-csv-import.inst
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 02 Mar 2017 15:36:19 +0100
+
 ucs-school-umc-csv-import (3.0.5-1) unstable; urgency=low
 
   * Bug #41387: hide disabled user roles in drop downs by setting the UCR
