Bug #43701/42349: hide disabled roles in search form of schoolwizards/users
    Merged: r77238 from ucs-school-4.1r2/ucs-school-umc-wizards
    Original comitter: sschwardt

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@77264 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-wizards/debian/changelog
+++ b/ucs-school-umc-wizards/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-wizards (9.0.2-1) unstable; urgency=low
+
+  * Bug #43701/42349: hide disabled user roles in drop downs
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 02 Mar 2017 12:29:28 +0100
+
 ucs-school-umc-wizards (9.0.1-1) unstable; urgency=medium
 
   * Bug #36789: adjust header buttons to new UMC design; applied patch
