--- a/ucs-school-umc-wizards/debian/changelog
+++ b/ucs-school-umc-wizards/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-wizards (9.0.2-2) unstable; urgency=low
+
+  * Bug #43701/42349: fix regression of last commit: disable sorting of user roles
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 02 Mar 2017 14:58:45 +0100
+
 ucs-school-umc-wizards (9.0.2-1) unstable; urgency=low
 
   * Bug #43701/42349: hide disabled user roles in drop downs
