--- a/ucs-school-umc-csv-import/debian/changelog
+++ b/ucs-school-umc-csv-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-csv-import (4.0.3-1) unstable; urgency=low
+
+  * Bug #41387: hide disabled user roles in drop downs by setting the UCR
+    variable ucsschool/csvimport/user/roles/disabled
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 02 Mar 2017 13:06:23 +0100
+
 ucs-school-umc-csv-import (4.0.2-1) unstable; urgency=medium
 
   * Bug #43577: Add old Grid from UCS 4.1 as fallback
