Bug #43700/41387: fix 38ucs-school-umc-csv-import.inst
    Merged: r77260 from ucs-school-4.1r2/ucs-school-umc-csv-import
    Original comitter: sschwardt

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@77269 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-csv-import/debian/changelog
+++ b/ucs-school-umc-csv-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-csv-import (4.0.3-2) unstable; urgency=low
+
+  * Bug #41387: fix 38ucs-school-umc-csv-import.inst
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 02 Mar 2017 15:36:19 +0100
+
 ucs-school-umc-csv-import (4.0.3-1) unstable; urgency=low
 
   * Bug #41387: hide disabled user roles in drop downs by setting the UCR
