Bug #43699/41418: remove broken code block in postinst
    Merged: r77251 from ucs-school-4.1r2/ucs-school-umc-csv-import
    Original comitter: sschwardt

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@77270 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-csv-import/debian/changelog
+++ b/ucs-school-umc-csv-import/debian/changelog
@@ -8,6 +8,7 @@ ucs-school-umc-csv-import (4.0.3-1) unstable; urgency=low
 
   * Bug #41387: hide disabled user roles in drop downs by setting the UCR
     variable ucsschool/csvimport/user/roles/disabled
+  * Bug #41418: remove broken code block in postinst
 
  -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 02 Mar 2017 13:06:23 +0100
 
