--- a/ucs-school-umc-installer/debian/changelog
+++ b/ucs-school-umc-installer/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-installer (5.0.0-3) unstable; urgency=medium
+
+  * Bug #43389: Bug #43711: fix typo in svn r76783
+
+ -- Florian Best <best@univention.de>  Fri, 03 Mar 2017 13:04:49 +0100
+
 ucs-school-umc-installer (5.0.0-2) unstable; urgency=medium
 
   * Bug #36789: adjust header buttons to new UMC design; applied patch
