Bug #43389: Bug #43718: fix typo
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@77347 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-installer/debian/changelog
+++ b/ucs-school-umc-installer/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-installer (5.0.0-4) unstable; urgency=medium
+
+  * Bug #43389: Bug #43718: fix typo
+
+ -- Florian Best <best@univention.de>  Fri, 03 Mar 2017 18:20:31 +0100
+
 ucs-school-umc-installer (5.0.0-3) unstable; urgency=medium
 
   * Bug #43389: Bug #43711: fix typo in svn r76783
