Bug #43526: fixed UCR variable description
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@77357 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-netlogon-user-logonscripts (12.0.5-2) unstable; urgency=low
+
+  * Bug #43526: fix UCR variable description
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 06 Mar 2017 00:37:12 +0100
+
 ucs-school-netlogon-user-logonscripts (12.0.5-1) unstable; urgency=low
 
   * Bug #37256: update of UCR variable descriptions and translations
