--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -1,6 +1,7 @@
 ucs-school-netlogon-user-logonscripts (12.0.5-2) unstable; urgency=low
 
   * Bug #43526: fix UCR variable description
+  * Bug #43526: removed check for non-existant VBS templates
 
  -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 06 Mar 2017 00:37:12 +0100
 
