--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -2,6 +2,8 @@ ucs-school-netlogon-user-logonscripts (12.0.5-2) unstable; urgency=low
 
   * Bug #43526: fix UCR variable description
   * Bug #43526: removed check for non-existant VBS templates
+  * Bug #43526: only remove VBS files in clean(), otherwise the icon for
+    teacher's UMC link is always removed
 
  -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 06 Mar 2017 00:37:12 +0100
 
