Bug #43655: advisory and merge forgotten directory
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@77370 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-netlogon-user-logonscripts (13.0.1-2) unstable; urgency=low
+
+  * Bug #43655: merge directory
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 06 Mar 2017 14:22:25 +0100
+
 ucs-school-netlogon-user-logonscripts (13.0.1-1.1) unstable; urgency=low
 
   * Bug #43655: merge changes of r77127 (sschwardt) and r77237 (dtroeder) and
