--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (10.0.0-5) unstable; urgency=low
+
+  * Bug #43579: fix UCR unset in wrong file
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 07 Mar 2017 12:44:42 +0100
+
 ucs-school-metapackage (10.0.0-4) unstable; urgency=low
 
   * Bug #43579: unset deprecated UCR variables
