--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-netlogon-user-logonscripts (13.0.1-4) unstable; urgency=low
+
+  * Bug #43655: add trailing slash
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 07 Mar 2017 14:53:58 +0100
+
 ucs-school-netlogon-user-logonscripts (13.0.1-3) unstable; urgency=low
 
   * Bug #43655: fix UMC path (previous commit overwrote change of r43578)
