--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-netlogon-user-logonscripts (12.0.5-3) unstable; urgency=low
+
+  * Bug #43526: fix traceback in clean() of listener module
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 08 Mar 2017 10:30:09 +0100
+
 ucs-school-netlogon-user-logonscripts (12.0.5-2) unstable; urgency=low
 
   * Bug #43526: fix UCR variable description
