--- a/ucs-school-umc-installer/debian/changelog
+++ b/ucs-school-umc-installer/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-installer (5.0.0-5) unstable; urgency=medium
+
+  * Bug #36789: Show only one close-button when UCS@School is
+    already installed.
+
+ -- Richard Ulmer <ulmer@univention.de>  Thu, 09 Mar 2017 11:05:54 +0100
+
 ucs-school-umc-installer (5.0.0-4) unstable; urgency=medium
 
   * Bug #43389: Bug #43718: fix typo
