--- a/ucs-school-umc-csv-import/debian/changelog
+++ b/ucs-school-umc-csv-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-csv-import (4.0.4-1) unstable; urgency=medium
+
+  * Bug #43577: replace dijitHidden by dijitDisplayNone
+
+ -- Florian Best <best@univention.de>  Thu, 09 Mar 2017 15:13:55 +0100
+
 ucs-school-umc-csv-import (4.0.3-2) unstable; urgency=low
 
   * Bug #41387: fix 38ucs-school-umc-csv-import.inst
