--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.0-2) unstable; urgency=medium
+
+  * Bug #43389: add missing dependency to pytest
+
+ -- Florian Best <best@univention.de>  Thu, 09 Mar 2017 15:34:56 +0100
+
 ucs-test-ucsschool (4.0.0-1) unstable; urgency=medium
 
   * Bug #43389: use univention.lib.umc.Client
