Bug #36789: Put "Advanced settings"-button into the header.
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@77538 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-wizards/debian/changelog
+++ b/ucs-school-umc-wizards/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-wizards (9.0.2-3) unstable; urgency=medium
+
+  * Bug #36789: Put "Advanced settings"-button into the header.
+
+ -- Richard Ulmer <ulmer@univention.de>  Thu, 09 Mar 2017 17:33:56 +0100
+
 ucs-school-umc-wizards (9.0.2-2) unstable; urgency=low
 
   * Bug #43701/42349: fix regression of last commit: disable sorting of user roles
