Bug #43748: adapt ou-creation to new DHCP-options behavior
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@77562 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.0-2) unstable; urgency=low
+
+  * Bug #43748: adapt ou-creation to new DHCP-options behavior
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 10 Mar 2017 10:03:05 +0100
+
 ucs-school-import (15.0.0-1) unstable; urgency=low
 
   * version bump for UCS@school 4.2
