--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (10.0.1-2) unstable; urgency=low
+
+  * Bug #43748: adapt ou-creation to new DHCP-options behavior
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 10 Mar 2017 10:05:32 +0100
+
 ucs-school-lib (10.0.1-1) unstable; urgency=medium
 
   * Bug #39379: psutil API change
