--- a/ucs-school-umc-installer/debian/changelog
+++ b/ucs-school-umc-installer/debian/changelog
@@ -4,6 +4,8 @@ ucs-school-umc-installer (5.0.0-6) unstable; urgency=low
     Please note: starting from this point, UCS@school is no longer able
     to be installed in Samba 3 domains. Any attempt will be rejected.
   * removed outdated binary package ucs-school-umc-installer-preview
+  * Updated german translations: consistantly use "Konfigurationsassistent"
+    instead of "Einrichtungsassistent"
 
  -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 08 Mar 2017 13:02:02 +0100
 
