Bug #36789: removed leftover from old grid
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@77602 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-wizards/debian/changelog
+++ b/ucs-school-umc-wizards/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-wizards (9.0.3-1) unstable; urgency=medium
+
+  * Bug #36789: removed leftover from old grid
+
+ -- Florian Best <best@univention.de>  Fri, 10 Mar 2017 17:05:32 +0100
+
 ucs-school-umc-wizards (9.0.2-3) unstable; urgency=medium
 
   * Bug #36789: Put "Advanced settings"-button into the header.
