Bug #43389: fix imports
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@77603 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.1-1) unstable; urgency=medium
+
+  * Bug #43389: fix imports
+
+ -- Florian Best <best@univention.de>  Fri, 10 Mar 2017 17:44:54 +0100
+
 ucs-test-ucsschool (4.0.0-2) unstable; urgency=medium
 
   * Bug #43389: add missing dependency to pytest
