--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (3.0.17-60) unstable; urgency=low
+
+  * Bug #43389: fix dependency
+
+ -- Florian Best <best@univention.de>  Mon, 13 Mar 2017 13:25:50 +0100
+
 ucs-test-ucsschool (3.0.17-59) unstable; urgency=low
 
   * Bug #41910: modify 207_import-users_school_change to check group
