--- a/italc-windows/debian/changelog
+++ b/italc-windows/debian/changelog
@@ -1,3 +1,9 @@
+italc-windows (4.0.0-2) unstable; urgency=low
+
+  * Bug #43833: fix join script for servers responsible for multiple OUs
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 13 Mar 2017 15:28:40 +0100
+
 italc-windows (4.0.0-1) unstable; urgency=low
 
   * Bug #43570: version bump for UCS@school 4.2
