--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (10.0.1-3) unstable; urgency=medium
+
+  * Bug #42408: fix typo when calling School.from_binddn()
+
+ -- Florian Best <best@univention.de>  Tue, 14 Mar 2017 11:18:21 +0100
+
 ucs-school-lib (10.0.1-2) unstable; urgency=low
 
   * Bug #43748: adapt ou-creation to new DHCP-options behavior
