--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,11 +1,17 @@
-ucs-school-umc-computerroom (9.0.6-1.1) unstable; urgency=low
+ucs-school-umc-computerroom (9.0.6-3) unstable; urgency=medium
+
+  * Bug #43575: fix grid content updating
+
+ -- Florian Best <best@univention.de>  Tue, 14 Mar 2017 16:48:05 +0100
+
+ucs-school-umc-computerroom (9.0.6-1) unstable; urgency=low
 
   * Bug #43527: enable hiding the teachers screen by default
     (ucsschool/umc/computerroom/hide_screenshots/teachers)
 
  -- Daniel Troeder <troeder@univention.de>  Thu, 02 Mar 2017 11:40:13 +0100
 
-ucs-school-umc-computerroom (9.0.6-1) unstable; urgency=medium
+ucs-school-umc-computerroom (9.0.6-2) unstable; urgency=medium
 
   * Bug #42408: decorator was renamed
 
