--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-computerroom (9.0.6-4) unstable; urgency=medium
+
+  * Bug #43575: preserve previous selection when updating grid
+
+ -- Florian Best <best@univention.de>  Tue, 14 Mar 2017 19:07:25 +0100
+
 ucs-school-umc-computerroom (9.0.6-3) unstable; urgency=medium
 
   * Bug #43575: fix grid content updating
