Bug #41725: add changelog entry
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@77863 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,11 @@
+ucs-test-ucsschool (4.0.2-1) unstable; urgency=low
+
+  * Bug #41725:
+    - add UCS@school admin with correct objectClass ucsschoolAdministrator
+    - added new version of 78_ldap_acls_dump
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 16 Mar 2017 22:49:39 +0100
+
 ucs-test-ucsschool (4.0.1-1) unstable; urgency=medium
 
   * Bug #43389: fix imports
