Bug #43579: create separate portal 'school-edu' only for edu-slaves
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@77868 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (10.0.0-6) unstable; urgency=low
+
+  * Bug #43579: create separate portal 'school-edu' only for edu-slaves
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 17 Mar 2017 09:07:24 +0100
+
 ucs-school-metapackage (10.0.0-5) unstable; urgency=low
 
   * Bug #43579: fix UCR unset in wrong file
