--- a/ucs-school-umc-helpdesk/debian/changelog
+++ b/ucs-school-umc-helpdesk/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-helpdesk (12.0.3-4) unstable; urgency=low
+
+  * Bug #38389: workaround DEBHELPER order by calling join script a second
+    time
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 17 Mar 2017 15:14:56 +0100
+
 ucs-school-umc-helpdesk (12.0.3-3) unstable; urgency=low
 
   * Bug #38389: change order in postinst
