Bug #43579: remove variables dynamically
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@77981 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (10.0.1-1) unstable; urgency=medium
+
+  * Bug #43579: remove variables dynamically
+
+ -- Florian Best <best@univention.de>  Mon, 20 Mar 2017 14:23:18 +0100
+
 ucs-school-metapackage (10.0.0-6) unstable; urgency=low
 
   * Bug #43579: create separate portal 'school-edu' only for edu-slaves
