--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-metapackage (10.0.1-1.1) unstable; urgency=low
+
+  * Bug #43579: only create portal 'school-edu' on edu-slaves, use 'domain'
+    portal on single-master
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 22 Mar 2017 14:36:44 +0100
+
 ucs-school-metapackage (10.0.1-1) unstable; urgency=medium
 
   * Bug #43579: remove variables dynamically
