Bug #43579: handle custom computer portal
* Bug #43579: handle custom computer portal
* allow portal_entry to be appended to multiple portals



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78144 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-metapackage (10.0.1-2) unstable; urgency=low
+
+  * Bug #43579: handle custom computer portal
+  * allow portal_entry to be appended to multiple portals
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 22 Mar 2017 15:34:46 +0100
+
 ucs-school-metapackage (10.0.1-1.1) unstable; urgency=low
 
   * Bug #43579: only create portal 'school-edu' on edu-slaves, use 'domain'
