Bug #43579: don't append to custom portal
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78149 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-metapackage (10.0.1-3) unstable; urgency=low
+
+  * Bug #43579: don't append to custom portal
+  * don't change portal on single-master
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 22 Mar 2017 16:02:43 +0100
+
 ucs-school-metapackage (10.0.1-2) unstable; urgency=low
 
   * Bug #43579: handle custom computer portal
