--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (10.0.1-4) unstable; urgency=low
+
+  * Bug #43579: handle space in portal name
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 23 Mar 2017 08:01:56 +0100
+
 ucs-school-metapackage (10.0.1-3) unstable; urgency=low
 
   * Bug #43579: don't append to custom portal
