--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.2-2) unstable; urgency=low
+
+  * Bug #43154: wait for replication before waiting for s4connector
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 23 Mar 2017 11:47:50 +0100
+
 ucs-test-ucsschool (4.0.2-1) unstable; urgency=low
 
   * Bug #41725:
