--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.3-1) unstable; urgency=medium
+
+  * Bug #41725: reenable test script 79_ldap_acl_access_to_uidNumber0
+
+ -- Florian Best <best@univention.de>  Thu, 23 Mar 2017 17:04:49 +0100
+
 ucs-test-ucsschool (4.0.2-2) unstable; urgency=low
 
   * Bug #43154: wait for replication before waiting for s4connector
