--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (10.0.1-5) unstable; urgency=low
+
+  * Bug #43579: adapt version check to appcenter API change
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 23 Mar 2017 17:22:51 +0100
+
 ucs-school-metapackage (10.0.1-4) unstable; urgency=low
 
   * Bug #43579: handle space in portal name
