Bug #43729: merge from 4.1r2
* Bug #43729: merge from 4.1r2, original changelog entries follow:
* Bug #43526: fixed UCR variable description
* Bug #43526: only remove VBS files otherwise the icon for teacher's UMC link
is always removed



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78251 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-netlogon-user-logonscripts/debian/changelog
+++ b/ucs-school-netlogon-user-logonscripts/debian/changelog
@@ -1,3 +1,12 @@
+ucs-school-netlogon-user-logonscripts (13.0.1-5) unstable; urgency=low
+
+  * Bug #43729: merge from 4.1r2, original changelog entries follow:
+  * Bug #43526: fixed UCR variable description
+  * Bug #43526: only remove VBS files otherwise the icon for teacher's UMC link
+  is always removed
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 24 Mar 2017 08:42:13 +0100
+
 ucs-school-netlogon-user-logonscripts (13.0.1-4) unstable; urgency=low
 
   * Bug #43655: add trailing slash
