--- a/ucs-school-l10n-fr/debian/changelog
+++ b/ucs-school-l10n-fr/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-l10n-fr (1.1.1-5) unstable; urgency=medium
+
+  * Bug #43731: update for UCS@school 4.1
+
+ -- Eduard Mai <mai@univention.de>  Fri, 24 Mar 2017 11:48:12 +0100
+
 ucs-school-l10n-fr (1.1.1-4) unstable; urgency=medium
 
   * Bug #41777: adjust typo in path of UCR script
