Bug #43731: revert, wrong branch
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@78272 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-l10n-fr/fr/ucs-school-umc-common/fr.po
+++ b/ucs-school-l10n-fr/fr/ucs-school-umc-common/fr.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: ucs-school-umc-common\n"
-"Report-Msgid-Bugs-To: packages@univention.de\n"
-"POT-Creation-Date: Wed, 22 Mar 2017 09:55:22 +0100\n"
+"Report-Msgid-Bugs-To: forge.univention.org\n"
+"POT-Creation-Date: 2016-10-19 03:18+0200\n"
 "PO-Revision-Date: 2016-06-23 20:32+0200\n"
 "Last-Translator: Nicolas Ternisien <nicolas@bureau-cornavin.com>\n"
 "Language-Team: French <fr@bureau-cornavin.com>\n"
