--- a/ucs-school-umc-common/debian/changelog
+++ b/ucs-school-umc-common/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-common (7.0.0-2) unstable; urgency=medium
+
+  * Bug #43731: correct build options
+
+ -- Eduard Mai <mai@univention.de>  Fri, 24 Mar 2017 12:45:52 +0100
+
 ucs-school-umc-common (7.0.0-1) unstable; urgency=low
 
   * Bug #43570: version bump for UCS@school 4.2
