Bug #43731: fix broken changelog
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78281 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-l10n-fr/debian/changelog
+++ b/ucs-school-l10n-fr/debian/changelog
@@ -1,4 +1,4 @@
-ucs-school-l10n-fr (2.0.0-22 unstable; urgency=medium
+ucs-school-l10n-fr (2.0.0-2) unstable; urgency=medium
 
   * Bug #43731: update for UCS@school 4.1
 
