Bug #41725: added changelog entry
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78328 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-ldap-acls-master/debian/changelog
+++ b/ucs-school-ldap-acls-master/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-ldap-acls-master (15.0.0-4) unstable; urgency=low
+
+  * Bug #41725: ACL fixup for group, share and DHCP objects
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 24 Mar 2017 23:18:34 +0100
+
 ucs-school-ldap-acls-master (15.0.0-3) unstable; urgency=low
 
   * Bug #43042: revert last commit
