Bug #41725: ucs-test: added changelog entry
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78336 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-1) unstable; urgency=low
+
+  * Bug #41725: updated and fixed 75_ldap_acls_* and 78_ldap_acls_dump
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 24 Mar 2017 23:19:44 +0100
+
 ucs-test-ucsschool (4.0.3-1) unstable; urgency=medium
 
   * Bug #41725: reenable test script 79_ldap_acl_access_to_uidNumber0
