Bug #43577: fix grid visibility due to changes in upstream UMC
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78360 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-csv-import/debian/changelog
+++ b/ucs-school-umc-csv-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-csv-import (4.0.5-1) unstable; urgency=medium
+
+  * Bug #43577: fix grid visibility due to changes in upstream UMC
+
+ -- Florian Best <best@univention.de>  Mon, 27 Mar 2017 15:59:48 +0200
+
 ucs-school-umc-csv-import (4.0.4-1) unstable; urgency=medium
 
   * Bug #43577: replace dijitHidden by dijitDisplayNone
