--- a/ucs-school-umc-rooms/debian/changelog
+++ b/ucs-school-umc-rooms/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-rooms (14.0.0-3) unstable; urgency=medium
+
+  * Bug #36789: adapt search form to new UMC design
+
+ -- Johannes Keiser <keiser@univention.de>  Mon, 27 Mar 2017 20:14:04 +0200
+
 ucs-school-umc-rooms (14.0.0-2) unstable; urgency=medium
 
   * Bug #36789: adjust header buttons to new UMC design; applied patch
