--- a/ucs-school-umc-users/debian/changelog
+++ b/ucs-school-umc-users/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-users (13.0.0-2) unstable; urgency=medium
+
+  * Bug #36789: adapt search form to new UMC design
+
+ -- Johannes Keiser <keiser@univention.de>  Mon, 27 Mar 2017 20:16:16 +0200
+
 ucs-school-umc-users (13.0.0-1) unstable; urgency=medium
 
   * Bug #42408: fix Cross Site Scripting (XSS) vulnerabilities
