--- a/ucs-school-umc-internetrules/debian/changelog
+++ b/ucs-school-umc-internetrules/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-internetrules (13.0.0-3) unstable; urgency=medium
+
+  * Bug #36789: adapt search form to new UMC design
+
+ -- Johannes Keiser <keiser@univention.de>  Tue, 28 Mar 2017 11:18:08 +0200
+
 ucs-school-umc-internetrules (13.0.0-2) unstable; urgency=medium
 
   * Bug #36789: adjust header buttons to new UMC design; applied patch
