--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (6.0.10-9) unstable; urgency=low
+
+  * Bug #44082: updated translations
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 28 Mar 2017 13:42:09 +0200
+
 ucs-school-umc-exam (6.0.10-8) unstable; urgency=low
 
   * Bug #44082: reset computerroom settings after exam has been finished
