--- a/ucs-school-umc-internetrules/debian/changelog
+++ b/ucs-school-umc-internetrules/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-internetrules (13.0.1-1) unstable; urgency=medium
+
+  * Bug #36789: remove duplicated header texts
+
+ -- Florian Best <best@univention.de>  Tue, 28 Mar 2017 17:35:34 +0200
+
 ucs-school-umc-internetrules (13.0.0-3) unstable; urgency=medium
 
   * Bug #36789: adapt search form to new UMC design
