Bug #36789: adjust layout
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78433 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-computerroom/debian/changelog
+++ b/ucs-school-umc-computerroom/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-computerroom (9.0.6-6) unstable; urgency=medium
+
+  * Bug #36789: adjust layout
+
+ -- Florian Best <best@univention.de>  Tue, 28 Mar 2017 17:36:32 +0200
+
 ucs-school-umc-computerroom (9.0.6-5) unstable; urgency=medium
 
   * Bug #43575: fix grid footerFormatter
