Bug #44089: adjust design to UCS 4.2
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78434 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-exam (7.0.3-1) unstable; urgency=medium
+
+  * Bug #44089: adjust design to UCS 4.2
+
+ -- Florian Best <best@univention.de>  Tue, 28 Mar 2017 17:40:47 +0200
+
 ucs-school-umc-exam (7.0.2-1) unstable; urgency=medium
 
   * Bug #43575: hide checkboxes in reboot grid
