--- a/ucs-school-umc-installer/debian/changelog
+++ b/ucs-school-umc-installer/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-installer (5.0.1-1) unstable; urgency=medium
+
+  * Bug #44089: adjust design to UCS 4.2
+
+ -- Florian Best <best@univention.de>  Tue, 28 Mar 2017 17:46:26 +0200
+
 ucs-school-umc-installer (5.0.0-6) unstable; urgency=low
 
   * Bug #42905: remove samba 3 from installer
