Bug #44089: adjust to UCS 4.2 design
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78441 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-wizards/debian/changelog
+++ b/ucs-school-umc-wizards/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-wizards (9.0.4-1) unstable; urgency=medium
+
+  * Bug #44089: adjust to UCS 4.2 design
+
+ -- Florian Best <best@univention.de>  Tue, 28 Mar 2017 17:55:31 +0200
+
 ucs-school-umc-wizards (9.0.3-3) unstable; urgency=medium
 
   * Bug #36789: Move 'Change school' button in Users (schools) module
