--- a/ucs-school-l10n-fr/debian/changelog
+++ b/ucs-school-l10n-fr/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-l10n-fr (2.0.0-3) unstable; urgency=low
+
+  * Bug #43752: removed preview installer translation
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 29 Mar 2017 00:32:45 +0200
+
 ucs-school-l10n-fr (2.0.0-2) unstable; urgency=medium
 
   * Bug #43731: update for UCS@school 4.1
