--- a/ucs-school-umc-csv-import/debian/changelog
+++ b/ucs-school-umc-csv-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-csv-import (4.0.6-2) unstable; urgency=medium
+
+  * Bug #43577: Fix grid in CSV import module overlapping buttons
+
+ -- Johannes Keiser <keiser@univention.de>  Wed, 29 Mar 2017 13:28:58 +0200
+
 ucs-school-umc-csv-import (4.0.6-1) unstable; urgency=medium
 
   * Bug #44089: adjust to UCS 4.2 design
