Bug #43577: remove shadow arround inline grids
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78467 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-csv-import/debian/changelog
+++ b/ucs-school-umc-csv-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-csv-import (4.0.7-1) unstable; urgency=medium
+
+  * Bug #43577: remove shadow arround inline grids
+
+ -- Florian Best <best@univention.de>  Wed, 29 Mar 2017 13:44:01 +0200
+
 ucs-school-umc-csv-import (4.0.6-2) unstable; urgency=medium
 
   * Bug #43577: Fix grid in CSV import module overlapping buttons
