Bug #44073: added UCR variable ucsschool/exam/group/ldap/blacklist/regex
In some customer environments the UCS@school users are member of additional
groups that are not required for exam users. Each additional group membership
slows down the creation of exam users.
Via the UCR variable ucsschool/exam/group/ldap/blacklist/regex a regular
expression may be specified. Each matching group DN is blacklisted for exam
users.
The UCR variable has to be specified on DC master.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-school-4.1r2@78475 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-umc-exam/debian/changelog
+++ b/ucs-school-umc-exam/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-umc-exam (6.0.11-1) unstable; urgency=low
+
+  * Bug #44073: added ucsschool/exam/group/ldap/blacklist/regex for
+    excluding custom group memberships for exam users
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 29 Mar 2017 16:21:04 +0200
+
 ucs-school-umc-exam (6.0.10-9) unstable; urgency=low
 
   * Bug #44082: updated translations
