--- a/ucs-school-l10n-fr/debian/changelog
+++ b/ucs-school-l10n-fr/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-l10n-fr (2.0.0-4) unstable; urgency=medium
+
+  * Bug #43731: Fixed fuzzy entries
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 29 Mar 2017 22:36:20 +0200
+
 ucs-school-l10n-fr (2.0.0-3) unstable; urgency=low
 
   * Bug #43752: removed preview installer translation
