Bug #43731: Add po header to ucs-school-ucr-l10n.po
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78485 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-l10n-fr/debian/changelog
+++ b/ucs-school-l10n-fr/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-l10n-fr (2.0.0-5) unstable; urgency=medium
+
+  * Bug #43731: Add po header to ucs-school-ucr-l10n.po 
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 29 Mar 2017 23:00:44 +0200
+
 ucs-school-l10n-fr (2.0.0-4) unstable; urgency=medium
 
   * Bug #43731: Fixed fuzzy entries
