Bug #41725: add fix for LDAP ACLs to prevent missing ACLs if univention-printerserver is not installed
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78548 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-ldap-acls-master/debian/changelog
+++ b/ucs-school-ldap-acls-master/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-ldap-acls-master (15.0.0-6) unstable; urgency=low
+
+  * Bug #41725: add fix for LDAP ACLs to prevent missing ACLs if
+    univention-printerserver is not installed
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 31 Mar 2017 12:31:03 +0200
+
 ucs-school-ldap-acls-master (15.0.0-5) unstable; urgency=low
 
   * Bug #43908: remove old rule / replace old rule with new construct
