Bug #41725: joinscript should fail if subcommands fail
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-school-4.2@78549 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/ucs-school-ldap-acls-master/debian/changelog
+++ b/ucs-school-ldap-acls-master/debian/changelog
@@ -2,6 +2,7 @@ ucs-school-ldap-acls-master (15.0.0-6) unstable; urgency=low
 
   * Bug #41725: add fix for LDAP ACLs to prevent missing ACLs if
     univention-printerserver is not installed
+  * Bug #41725: join script should stop if any command fails
 
  -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 31 Mar 2017 12:31:03 +0200
 
